# iceberg-diag

./: .gitignore  README.md  pyproject.toml
icebergdiag/: cli.py  exceptions.py
icebergdiag/diagnostics/: manager.py
icebergdiag/metrics/: table_metric.py  table_metrics.py  table_metrics_displayer.py
tests/: test_metric_calculator.py
