[project]
name = "iceberg-diag"
version = "0.1.3"
description = "Upsolver Iceberg Auditor CLI"
authors = [
    {name = "Upsolver", email = "developers@upsolver.com"},
    {name = "Karsten ROY", email = "karsten.roy@we-are-adot.com"}
]
license.text = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.1",
    "botocore>=1.35.1",
    "pyiceberg[hive,s3fs]==0.7.1", # Cannot use 0.8.0 due a bug in TABLE_TYPE access
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "polars>=1.14.0",
]
[tool.uv]
package = true

[project.scripts]
iceberg-diag = 'icebergdiag.cli:cli_runner'
